@@ -1,3 +1,9 @@
+2009-11-24  Mark Rowe  <mrowe@apple.com>
+
+        Land the configuration that includes the two debug GTK Linux builders.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2009-11-24  David Kilzer  <ddkilzer@apple.com>
 
         <http://webkit.org/b/31840> bisect-builds broke after r50080
